<resources>
    <string name="app_name">Dartplay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bugReportsFragment_tabItemText_allBugs">All</string>
    <string name="bugReportsFragment_tabItemText_resolvedBugs">Resolved</string>
    <string name="bugReportsFragment_tabItemText_pendingBugs">Pending</string>
    <string name="bugDashboardFragment_iv_minorBugsDescription">Minor bugs icon</string>
    <string name="bugDashboardFragment_iv_criticalBugsDescription">Critical Bugs description</string>
    <string name="bugDashboardFragment_iv_cosmeticBugDescription">Cosmetic bug description</string>
    <string name="bugDashboardFragment_iv_otherBugsDescription">Other bug description</string>
    <string name="bugDashboardFragment_tv_otherBugsName">Others</string>
    <string name="bugDashboardFragment_tv_cosmeticBugsName">Cosmetic</string>
    <string name="bugDashboardFragment_tv_minorBugsName">Minor</string>
    <string name="bugDashboardFragment_tv_criticalBugsName">Critical</string>
    <string name="bugReportsFragment_tabItemText_criticalBugs">Critical</string>
    <string name="bugReportsFragment_tabItemText_minorBugs">Minor</string>
    <string name="bugReportsFragment_tabItemText_cosmeticBugs">Cosmetic</string>
    <string name="bugReportsFragment_tabItemText_otherBugs">Others</string>z

    <string-array name="bugTypeClassification">
        <item>CRITICAL BUGS</item>
        <item>MINOR BUGS</item>
        <item>COSMETIC BUGS</item>
        <item>OTHER BUGS</item>
        <item>UNCLASSIFIED</item>
    </string-array>
</resources>